Add defaultRpcUrl and rpcUrl to network object