@@ -73,7 +73,8 @@
         <swagger.version>2.2.38</swagger.version>
 
         <!-- Test dependencies  -->
-        <junit-jupiter.version>6.0.0</junit-jupiter.version>
+        <junit-jupiter.version>5.10.2</junit-jupiter.version>
+        <junit-pionner.version>2.3.0</junit-pionner.version>
         <assertj.version>3.27.6</assertj.version>
 
         <!-- Maven plugins -->
@@ -168,6 +169,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.junit-pioneer</groupId>
+            <artifactId>junit-pioneer</artifactId>
+            <version>${junit-pionner.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>${assertj.version}</version>
@@ -217,6 +224,10 @@
                     </dependency>
                 </dependencies>
                 <configuration>
+                    <argLine>
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                    </argLine>
                     <reportFormat>plain</reportFormat>
                     <consoleOutputReporter>
                         <disable>true</disable>
